--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,8 @@ scikit-learn>=0.22.1
 matplotlib>=1.4.3
 pandas>=0.19
 Cython>= 0.28.5
-Streamlit= 1.11.1
-Streamlit-authenticator= 0.1.1
+Streamlit== 1.11.1
+Streamlit-authenticator== 0.1.1
 torch>= 1.7.1
-torchvision>= 0.1.6
-transformers>= 4.21.1
+torchvision>=0.1.6
+transformers>=4.21.1
